Fixes the streamfield overflow issues against latest Wagtail SCSS.

--- a/wagtail/admin/static_src/wagtailadmin/scss/components/_header.scss
+++ b/wagtail/admin/static_src/wagtailadmin/scss/components/_header.scss
@@ -50,10 +50,6 @@ header {
         margin-bottom: 0;
     }
 
-    &.tab-merged {
-        overflow-x: hidden;
-    }
-
     &.tab-merged,
     &.no-border {
         border: 0;
